--- a/slides/packages.tex
+++ b/slides/packages.tex
@@ -11,6 +11,7 @@
 \usetikzlibrary{fit}
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{decorations.markings}
+\usetikzlibrary{arrows.meta}
 \pgfplotsset{compat=1.18}
 
 \pgfplotsset{
